--- a/backend/package.json
+++ b/backend/package.json
@@ -7,20 +7,23 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.1",
     "i18next": "^24.2.2",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "nodemailer": "^7.0.12",
+    "pdfkit": "^0.14.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "nodemailer": "^7.0.12"
+    "nodemon": "^3.1.11"
   },
   "nodemonConfig": {
-  "ignore": ["data/*"]
-}
+    "ignore": ["data/*", "invoices/*"]
+  }
 }
